--- a/index.html
+++ b/index.html
@@ -74,7 +74,6 @@
         </div>
         <div class="rightContent">
           <div class="workingHours">Working Hours</div>
-        
           <div class="days">
             <span class="colorText">Mon | Thurs</span>
             <span class="colorText1">0900hrs–1600hrs</span>
@@ -84,7 +83,7 @@
         </div>
         </div>
       </div>
-      <div class="line"></div>
+      <hr>
       <div class="ribbon" id="ribbon">
         <svg width="78" height="85" viewBox="0 0 98 110" fill="none" xmlns="http://www.w3.org/2000/svg">
           <g filter="url(#filter0_d_181_258)">
@@ -114,11 +113,16 @@
           </defs>
           </svg>
       </div>  
+      <div class="hamburger" id="hamburger">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
       <nav class="navLinks">
         <ul id="nav-list">
             <li><a href="#home" class="nav-item active">Home</a></li>
             <li><a href="#about" class="nav-item">About Us</a></li>
-            <li><a href="#programs" class="nav-item">Our Programs</a></li>
+            <li><a href="programs.html" class="nav-item">Our Programs</a></li>
             <li><a href="#enrollment" class="nav-item">Enrollment</a></li>
             <li><a href="#gallery" class="nav-item">Gallery</a></li>
             <li><a href="#faqs" class="nav-item">FAQs</a></li>
@@ -134,31 +138,27 @@
           <button class="contact">
             Contact Us
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="m6 18l2.5-2.5M18 6H9m9 0v9m0-9l-6.5 6.5"/>
+              <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m6 18l2.5-2.5M18 6H9m9 0v9m0-9l-6.5 6.5"/>
             </svg>
           </button>
         </div>
       </nav>
     </header>
     <section id="home" class="homeSection">
-      <div class="homeContent">
+      <div class="bagroundImages">
         <img class="homeImage1" src="Resources/IMG-20251118-WA0190.jpg" alt="Home Image">
-        <img class="homeImage2" src="Resources/IMG-20251118-WA0218 1.png"  height="auto" alt="Home Image">
+        <img class="homeImage2" src="Resources/IMG-20251118-WA0218 1.png"  alt="Home Image">
         <img class="homeImage3" src="Resources/Entropy Blue 02 1.png" width="45%" height="auto" alt="Home Image">
       </div>
       <div class="heroContent">
-        <h1 id="typing-text">
-          <span class="head"></span><span class="typing-cursor">|</span>
-        </h1>
-        <p>A safe, inclusive, and stimulating space where <br> young learners explore, investigate and build<br> foundations for lifelong success.</p>
+        <div class="movingText">
+          <h1 id="typing-text">
+            <span class="head"></span><span class="typing-cursor">|</span>
+          </h1>
+        </div>
+        <div class="herotext">A safe, inclusive, and stimulating space where  young learners explore, investigate and build foundations for lifelong success.</div>
         <div class="hero-buttons">
-          <button class="contact">
-            Book a Tour
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
-              <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="m6 18l2.5-2.5M18 6H9m9 0v9m0-9l-6.5 6.5"/>
-            </svg>
-          </button>
-          <button class="enroll">
+            <button class="enroll">
             Enroll Today
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="-2 -2 24 24">
               <path fill="currentColor" d="m5.72 14.456l1.761-.508l10.603-10.73a.456.456 0 0 0-.003-.64l-.635-.642a.443.443 0 0 0-.632-.003L6.239 12.635zM18.703.664l.635.643c.876.887.884 2.318.016 3.196L8.428 15.561l-3.764 1.084a.9.9 0 0 1-1.11-.623a.9.9 0 0 1-.002-.506l1.095-3.84L15.544.647a2.215 2.215 0 0 1 3.159.016zM7.184 1.817c.496 0 .898.407.898.909a.903.903 0 0 1-.898.909H3.592c-.992 0-1.796.814-1.796 1.817v10.906c0 1.004.804 1.818 1.796 1.818h10.776c.992 0 1.797-.814 1.797-1.818v-3.635c0-.502.402-.909.898-.909s.898.407.898.91v3.634c0 2.008-1.609 3.636-3.593 3.636H3.592C1.608 19.994 0 18.366 0 16.358V5.452c0-2.007 1.608-3.635 3.592-3.635z"/>
@@ -168,22 +168,12 @@
       </div>
     </section>
     <section class="aboutSection">
-      <div class="aboutBackground">
-        <img src="Resources/aboutusbackground.png" alt="About Image">
-      </div>
       <div class="aboutContent">
         <div class="heading">
           <h1 class ="pri">ABOUT US</h1>
-          <h1 class ="sec">ABOUT US</h1>
         </div>
       </div>
       <div class="aboutText">
-        <div class="number2">
-          <h1>FOUNDATION ECD CENTER</h1>
-        </div>
-        <div class="number1">
-          <h1>Rutenga’s Most Trusted Pre-School Since 2010</h1>
-        </div>
         <div class="whoarewe">
           <h1>Who are we?</h1>
           <p>Foundation Pre-School is a registered early childhood development centre located in Rutenga, Mwenezi, in the Masvingo Province.</p>
@@ -265,7 +255,6 @@
             </div>
           </div>
           <div class="missionStateVision">
-            <div class="vision">
               <div class="visionContent">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24"><g fill="none" stroke="currentColor" stroke-width="1.5"><path stroke-linecap="round" stroke-linejoin="round" d="M2.5 8.187c.104-2.1.415-3.41 1.347-4.34c.93-.932 2.24-1.243 4.34-1.347M21.5 8.187c-.104-2.1-.415-3.41-1.347-4.34c-.93-.932-2.24-1.243-4.34-1.347m0 19c2.1-.104 3.41-.415 4.34-1.347c.932-.93 1.243-2.24 1.347-4.34M8.187 21.5c-2.1-.104-3.41-.415-4.34-1.347c-.932-.93-1.243-2.24-1.347-4.34"/><path d="M19.635 11.318c.243.304.365.457.365.682s-.122.378-.365.682C18.542 14.05 15.751 17 12 17s-6.542-2.95-7.635-4.318C4.122 12.378 4 12.225 4 12s.122-.378.365-.682C5.458 9.95 8.249 7 12 7s6.542 2.95 7.635 4.318Z"/><path d="M14 12a2 2 0 1 0-4 0a2 2 0 0 0 4 0Z"/></g></svg>
               </div>
@@ -273,8 +262,6 @@
               <div class="visionText">
                 <p>To nurture reflective, resourceful, resilient, confident, and independent learners who are prepared for their future educational journey.</p> <p>To provide a secure and supportive foundation that helps each child feel safe and cherished</p>
               </div>
-            </div>
-            <div class="missionstatement">
               <div class="missionicon">
                 <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 48 48"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" d="m29.94 28.054l-.073.04a21.5 21.5 0 0 0 3.072-2.493c6.619-6.619 10.016-12.576 9.512-20.052c-7.476-.505-13.433 2.893-20.051 9.512a21.5 21.5 0 0 0-2.495 3.073l.042-.074C15.552 16.823 8.765 19.164 5.5 23.135l11.513.108l.026-.047a61 61 0 0 0-2.107 5.024l4.848 4.848c1.612-.595 3.33-1.3 5.023-2.107l-.046.026l.108 11.513c3.97-3.265 6.312-10.052 5.075-14.446m-13.503 7.519a13.37 13.37 0 0 1-6.903 2.893a13.37 13.37 0 0 1 2.893-6.903l.99 3.02Z" stroke-width="2.5"/><circle cx="31.596" cy="16.404" r="2.434" fill="#0f0339" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/></svg>
               </div>
@@ -293,7 +280,6 @@
                   <p>To lay a foundation for Learning: building a strong foundation for lifelong learning and well-being. </p>
                 </div>
               </div>
-            </div>
         </div>
         </div>
         <div class="teamMembers">
@@ -761,6 +747,7 @@
 
         <div class="trp">
           <h1>TRIPS</h1>
+          <a href="programs.html" class="nav-item">Our Programs</a>
         </div>
         <div class="trips">
           <div class="trip">
