--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <body>
     <header>
       <div class="topSection">
-        <div class="leftContent">
+        <div class="leftContent mobile-call">
           <div class="icon">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -82,7 +82,13 @@
           </div>
         </div>
         </div>
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
       </div>
+      
       <hr>
       <div class="ribbon" id="ribbon">
         <svg width="78" height="85" viewBox="0 0 98 110" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -113,12 +119,7 @@
           </defs>
           </svg>
       </div>  
-      <div class="hamburger" id="hamburger">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <nav class="navLinks">
+        <nav class="navLinks">
         <ul id="nav-list">
             <li><a href="#home" class="nav-item active">Home</a></li>
             <li><a href="#about" class="nav-item">About Us</a></li>
