--- a/index.html
+++ b/index.html
@@ -29,9 +29,6 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Kumbh+Sans:wght,YOPQ@100..900,300&family=Montserrat:ital,wght@0,738;1,738&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <script src="script.js"></script>
-
   <body>
     <header>
       <div class="topSection">
@@ -119,12 +116,14 @@
         <span></span>
         <span></span>
       </div>
+    </header>
+    <header class="botton-nav">
       <nav class="navLinks">
         <ul id="nav-list">
             <li><a href="#home" class="nav-item active">Home</a></li>
             <li><a href="#about" class="nav-item">About Us</a></li>
-            <li><a href="programs.html" class="nav-item">Our Programs</a></li>
-            <li><a href="#enrollment" class="nav-item">Enrollment</a></li>
+            <li><a href="#programs" class="nav-item">Our Programs</a></li>
+            <li><a href="#enroll" class="nav-item">Enrollment</a></li>
             <li><a href="#gallery" class="nav-item">Gallery</a></li>
             <li><a href="#faqs" class="nav-item">FAQs</a></li>
         </ul>
@@ -168,7 +167,7 @@
         </div>
       </div>
     </section>
-    <section class="aboutSection">
+    <section id="about" class="aboutSection">
       <div class="aboutContent">
         <div class="heading">
           <h1 class ="pri">ABOUT US</h1>
@@ -361,7 +360,7 @@
         </div>
       </div>
     </section>
-    <section class="programs">
+    <section id="programs" class="programs">
         <div class="heading">
           <h1 class ="pri">PROGRAMS</h1>
         </div>
@@ -471,7 +470,7 @@
         </div>
       </div>
     </section>
-    <section class="classes-container">
+    <section id="classes" class="classes-container">
       <div class="main-wrapper">
         <div class="page-title">
             <h1>Class Information</h1>
@@ -667,9 +666,8 @@
             </div>
         </div>
     </div>
-
     </section>
-    <section class="registration">
+    <section id="enroll" class="registration">
       <div class="heading">
         <h1 class="pri">REGISTRATION</h1>
       </div>
@@ -789,7 +787,7 @@
         <button class="submit" type="submit">Submit</button>
       </div>
     </section>
-    <section class="gallery">  
+    <section id="gallery" class="gallery">  
       <div class="heading">
         <h1 class ="pri">GALLERY</h1>
       </div>
@@ -885,7 +883,7 @@
         </div>
       </div>
     </section>
-    <section class="faqs">
+    <section id="faqs" class="faqs">
       <div class="heading">
         <h1 class="pri">FAQS</h1>
       </div>
@@ -960,7 +958,7 @@
         </form>
       </div>
     </section>
-    <section class="contact-section">
+    <section id="contact" class="contact-section">
       <div class="heading">
         <h1 class ="pri">CONTACT</h1>
       </div>
@@ -1023,7 +1021,7 @@
         </div>
      
     </section>
-    <section class="footer-section">
+    <section id="footer" class="footer-section">
       <div class="footer-header">FOUNDATION ECD CENTER</div>
       <div class="footer-motto">See, Learn and Develop</div>
       <div class="overcontainer">
@@ -1092,8 +1090,6 @@
         <span class="designer">DesignedBy Fley<span class="Designercolor">Pixelabs</span></span>
       </div>      
     </section>
-    <section>
-      
-    </section>
+    <script src="script.js"></script>
   </body>
 </html>
